--- a/experiment/faiss.ipynb
+++ b/experiment/faiss.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,48 +12,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tuannm/anaconda3/envs/llama_rag/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/tuannm/anaconda3/envs/llama_rag/lib/python3.10/site-packages/torch/cuda/__init__.py:138: UserWarning: CUDA initialization: The NVIDIA driver on your system is too old (found version 11040). Please update your GPU driver by downloading and installing a new version from the URL: http://www.nvidia.com/Download/index.aspx Alternatively, go to: https://pytorch.org to install a PyTorch version that has been compiled with your version of the CUDA driver. (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:108.)\n",
-      "  return torch._C._cuda_getDeviceCount() > 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "embedding_model = HuggingFaceEmbeddings()\n",
+    "embedding_model = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-l6-v2\")\n",
     "db = FAISS.load_local(\"/media/ivirse/Data1/Project_ISOFH/Materials/NLP/Rag_LLAMA2/vectorstores/db_faiss\", embeddings=embedding_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs = db.similarity_search(\"Mức lương mới ra trường\")"
+    "docs = db.similarity_search(\"Thông tin chi tiết về ngành ETE9\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(page_content='Mức lương thế nào: mới ra trường 13-15 triệu/1 tháng.'),\n",
-       " Document(page_content='Học như nào là sao? Khó như bao ngành khác, nhiều bài tập, nhiều dự án. \\nHọc gì? - Mạch điện tử, vi mạch (con chip đen đen bé tí trên mạch điện tử) cấu trúc máy tính (nhúng - là các máy tính được đưa vào trong ô tô, thiết bị điện tử - tivi, tủ\\u202flạnh, camera, thiết bị viễn thông - trạm phát 4G, 5G, wifi, ... ), lập trình (tất tần tật các loại luôn - từ phần cứng, đến web, app, cơ sở dữ liệu, máy chủ), hệ thống thông tin di động (4G, 5G), mạng máy tính, thiết bị Y sinh, hàng không vũ trụ.'),\n",
-       " Document(page_content='Làm ở đâu: Các công ty thiết kế chip (Infineon, Viettel, FPT Semi, Synopsys, Qorvo, Dolphin, HCL, CoAsia, Renesas, Intel), các công ty làm mạch điện tử, làm máy tính nhúng, làm điện thoại (Bosch, FPT Software, Panasonics, LGE, Samsung, Toshiba, Nisan, FPT Japan, VNPT Technology, Viettel High Tech, Meiko, McNex, Patron Vina), Các công ty di động (Vinaphone, Mobifone, Viettel), Các bệnh viện, Các sân bay, Các công ty làm phân tích dữ liệu, AI/ML (VinBigData, VinAI, Viettel, các ngân hàng, VNPT Media, VNPT IT), Các công ty phần mềm (Avepoint, Savycom, FPT Software, VNPT, Viettel, cái này thì nhiều vô số kể, ...)')]"
+       "[Document(page_content='sâu của ngành điện tử viễn thông và Kỹ thuật máy tính.', metadata={'source': 'data/word/Q&A về điện tử viễn thông.docx'}),\n",
+       " Document(page_content='Câu hỏi 23:Em rất muốn tìm hiểu về các hệ thống mạng thông tin, mạng máy tính. Xin Thầy Cô cho em biết đây có phải lĩnh vực đào tạo của ngành công nghệ thông tin hay không?\\n\\n\\n\\nTrả lời:\\n\\n\\n\\nChào em!', metadata={'source': 'data/word/Q&A về điện tử viễn thông.docx'}),\n",
+       " Document(page_content='Thông tin chi tiết về ngành ETE9:\\n\\nNgành ETE9 Có các thông tin sau:\\n\\n1) Học gì?\\n\\n- Mạch điện tử, thiết kế mạch, thiết kế vi mạch\\n\\n- Cấu trúc máy tính (nhúng) - là máy tính trong điện thoại, trong ô tô, trong thiết bị điện tử gia dụng, trong thẻ ngân hàng\\n\\n- Lập trình máy tính nhúng: ngôn ngữ lập trình C, hệ điều hành trên máy tính nhúng, điều khiển các cảm biến, động cơ trong các thiết bị (điều khiển phần cứng)\\n\\n- Kết nối IoT - Kết nối 4G, 5G, Bluetooth, WIFI, ...', metadata={'source': 'data/word/Review ngành.docx'}),\n",
+       " Document(page_content='3) Lương khởi điểm: 13-15 triệu. Đi Nhật thì tầm 50 triệu - cần N3, N2 và qua phỏng vấn của công ty thì được tuyển từ hết năm 3 (1 tháng)\\n\\n\\n\\n\\nThông tin chi tiết về ngành ET1:\\n\\nNgành ETE1 có các thông tin sau\\n\\nHọc như nào là sao? Khó như bao ngành khác, nhiều bài tập, nhiều dự án.', metadata={'source': 'data/word/Review ngành.docx'})]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
